# nicegui-openlayers

./: .gitignore  README.md  pyproject.toml
examples/: 01_basic.py  02_live_data.py  03_layers.py  04_svg_and_popups.py  05_drawing.py  06_geojson.py  07_projections.py  08_custom_controls.py  09_panels.py
nicegui_openlayers/: __init__.py  controls.py  features.py  layers.py  map.py  presets.py
nicegui_openlayers/frontend/: openlayers.css  openlayers.js
